--- a/MyTaskApp/App.config
+++ b/MyTaskApp/App.config
@@ -1,10 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
 	<configSections>
+  <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+   <section name="MyTaskApp.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+  </sectionGroup>
  </configSections>
 	<connectionStrings>
-		<add name="taskdb" connectionString="server=localhost;user id=username;password=*******;database=taskapp"/>
-	</connectionStrings>
+  <add name="taskdb" connectionString="server=localhost;user id=Guest;password=TaskAppGuest1;database=taskapp" />
+  <add name="MyTaskApp.Properties.Settings.taskappConnect" connectionString="server=localhost;user id=Guest;password=TaskAppGuest1;database=taskapp"
+   providerName="MySql.Data.MySqlClient" />
+ </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
@@ -16,4 +21,14 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <userSettings>
+    <MyTaskApp.Properties.Settings>
+      <setting name="userName" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="passUser" serializeAs="String">
+        <value />
+      </setting>
+    </MyTaskApp.Properties.Settings>
+  </userSettings>
 </configuration>
